[gd_scene load_steps=2 format=3 uid="uid://d1581tvhyplmr"]

[ext_resource type="Script" path="res://game_scene.gd" id="1_pmctv"]

[node name="GameScene" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1_pmctv")

[node name="Timers" type="Node" parent="."]

[node name="FeedbackOffTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 70
text = "[교과서] 방탈출 게임 "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 400)
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Quiz_1" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Quiz_1_BG" type="ColorRect" parent="VBoxContainer/HBoxContainer/Quiz_1"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Quiz_1/Quiz_1_BG"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.5
offset_top = 25.0
offset_right = 74.5
offset_bottom = 85.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "퀴즈 1 정답"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 2

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/Quiz_1/Quiz_1_BG" groups=["answer_input"]]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
placeholder_text = "정답 입력란"

[node name="Quiz_1_Check" type="Label" parent="VBoxContainer/HBoxContainer/Quiz_1/Quiz_1_BG" groups=["answer_check"]]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quiz_2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Quiz_2_BG" type="ColorRect" parent="VBoxContainer/HBoxContainer/Quiz_2"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Quiz_2/Quiz_2_BG"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.5
offset_top = 25.0
offset_right = 77.5
offset_bottom = 85.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "퀴즈 2 정답"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/Quiz_2/Quiz_2_BG" groups=["answer_input"]]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -35.0
offset_right = 150.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
placeholder_text = "정답 입력란"

[node name="Quiz_2_Check" type="Label" parent="VBoxContainer/HBoxContainer/Quiz_2/Quiz_2_BG" groups=["answer_check"]]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quiz_3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Quiz_3_BG" type="ColorRect" parent="VBoxContainer/HBoxContainer/Quiz_3"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Quiz_3/Quiz_3_BG"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.5
offset_top = 25.0
offset_right = 77.5
offset_bottom = 85.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "퀴즈 3 정답"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/Quiz_3/Quiz_3_BG" groups=["answer_input"]]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -35.0
offset_right = 150.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
placeholder_text = "정답 입력란"

[node name="Quiz_3_Check" type="Label" parent="VBoxContainer/HBoxContainer/Quiz_3/Quiz_3_BG" groups=["answer_check"]]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quiz_4" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Quiz_4_BG" type="ColorRect" parent="VBoxContainer/HBoxContainer/Quiz_4"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Quiz_4/Quiz_4_BG"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = 25.0
offset_right = 78.0
offset_bottom = 85.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "퀴즈 4 정답"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/Quiz_4/Quiz_4_BG" groups=["answer_input"]]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -35.0
offset_right = 150.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
placeholder_text = "정답 입력란"

[node name="Quiz_4_Check" type="Label" parent="VBoxContainer/HBoxContainer/Quiz_4/Quiz_4_BG" groups=["answer_check"]]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 100
alignment = 1

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(240, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 25
alignment = 1
item_count = 8
popup/item_0/text = "민준-오전"
popup/item_0/id = 0
popup/item_1/text = "민준-오후"
popup/item_1/id = 1
popup/item_2/text = "승일-오전"
popup/item_2/id = 2
popup/item_3/text = "승일-오후"
popup/item_3/id = 3
popup/item_4/text = "서아-오전"
popup/item_4/id = 4
popup/item_5/text = "서아-오후"
popup/item_5/id = 5
popup/item_6/text = "은재-오전"
popup/item_6/id = 6
popup/item_7/text = "은재-오후"
popup/item_7/id = 7

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "시작버튼"

[node name="SubmitButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "정답 제출"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimeRecordingLable" type="Label" parent="CanvasLayer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 50
text = "안녕하세요"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timers/FeedbackOffTimer" to="." method="_on_feedback_off_timer_timeout"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SubmitButton" to="." method="_on_submit_button_pressed"]
